# dk

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
iso/boot/grub/: grub.cfg
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  long_mode_init.asm
src/asm/: boot  boot.asm  helloworld.asm  linker.ld  long_mode_init  long_mode_init.asm
src/memory/: area_frame_allocator.rs  mod.rs
src/vga/: mod.rs
tests/: stack_overflow.rs
