[package]
name = "dk"
version = "0.1.0"
authors = ["Joe Becher <me@drazisil.com>"]
edition = "2018"

# [lib]
# crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.1.0"
spin = "0.4.5"
multiboot2 = "0.1.0"
uart_16550 = "0.2.0"
x86_64 = "0.12.2" 
bootloader = "0.9.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300          # (in seconds)

test-success-exit-code = 33         # (0x10 << 1) | 1
